; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_obs_remove_raw_video_callback.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_obs_remove_raw_video_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.obs_core_video }
%struct.obs_core_video = type { i32 }
%struct.video_data = type opaque
%struct.video_data.0 = type opaque

@obs = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_remove_raw_video_callback(void (i8*, %struct.video_data*)* %0, i8* %1) #0 {
  %3 = alloca void (i8*, %struct.video_data*)*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.obs_core_video*, align 8
  store void (i8*, %struct.video_data*)* %0, void (i8*, %struct.video_data*)** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @obs, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  store %struct.obs_core_video* %7, %struct.obs_core_video** %5, align 8
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @obs, align 8
  %9 = icmp ne %struct.TYPE_2__* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %19

11:                                               ; preds = %2
  %12 = load %struct.obs_core_video*, %struct.obs_core_video** %5, align 8
  %13 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load void (i8*, %struct.video_data*)*, void (i8*, %struct.video_data*)** %3, align 8
  %16 = bitcast void (i8*, %struct.video_data*)* %15 to void (i8*, %struct.video_data.0*)*
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @stop_raw_video(i32 %14, void (i8*, %struct.video_data.0*)* %16, i8* %17)
  br label %19

19:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @stop_raw_video(i32, void (i8*, %struct.video_data.0*)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
